<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="bottomSheetFragment"
            type="com.ssafy.yobee.ui.search.SearchSortBottomSheetFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        tools:context=".ui.search.SearchSortBottomSheetFragment">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_bottom_sheet_bar" />

        <TextView
            style="@style/TextViewBold.Size14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="30dp"
            android:text="@string/title_sort"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_marginBottom="26dp"
            android:onClick="@{()->bottomSheetFragment.onClickSortByLike()}"
            android:orientation="horizontal">

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_sort_like" />

            <TextView
                style="@style/TextViewRegular.Size14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/content_sort_like"

                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_marginBottom="26dp"
            android:onClick="@{()->bottomSheetFragment.onClickSortByReView()}"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_sort_review" />

            <TextView
                style="@style/TextViewRegular.Size14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/content_sort_review"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_marginBottom="26dp"
            android:onClick="@{()->bottomSheetFragment.onClickSortByDifficulty()}"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_sort_difficulty" />

            <TextView
                style="@style/TextViewRegular.Size14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/content_sort_difficulty"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>


</layout>