<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="resetPasswordViewModel"
            type="com.ssafy.yobee.ui.login.ResetPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.ResetPasswordFragment">

        <include
            android:id="@+id/tb_reset_password"
            layout="@layout/common_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_reset_password_title"
            style="@style/TextViewBold.Size18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/content_reset_password_help"
            android:textColor="@color/grey_600"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_reset_password"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/tv_reset_password_title_email"
            style="@style/TextViewRegular.Size12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/title_email"
            android:textColor="@color/grey_600"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_reset_password_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_reset_password_email"
            style="@style/TextInputLayoutRadius8BitterSweet200Stroke1Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:boxStrokeErrorColor="@color/sunset"
            app:errorIconDrawable="@null"
            app:errorTextColor="@color/sunset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_reset_password_title_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_reset_password_email"
                style="@style/TextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/content_input_email_is_empty"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                app:addTextChangedListener="@{resetPasswordViewModel.emailWatcher()}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reset_password"
            style="@style/ButtonStyle.LargeStyle.BitterSweet4008Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:enabled="false"
            android:onClick="@{()->resetPasswordViewModel.resetPassword()}"
            android:text="@string/content_reset_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>