<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.cook.fragment.CookFinishFragment">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="500dp"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/lottie_firecracker" />

        <TextView
            android:id="@+id/tv_cook_finish_complete"
            style="@style/TextViewBold.Size24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_cook_finish"
            android:textColor="@color/bittersweet_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cook_finish_photo"
            style="@style/ButtonStyle.LargeStyle.BitterSweet4008Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:text="@string/content_cook_finish_photo"
            app:layout_constraintBottom_toTopOf="@+id/btn_cook_finish_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cook_finish_complete"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cook_finish_home"
            style="@style/ButtonStyle.LargeStyle.BitterSweet2008Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="10dp"
            android:text="@string/content_cook_finish_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_cook_finish_photo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>